Changes to Version 3.0-3

  o Fix a bug in gamLine() to return values in the response scale, rather than the linear predictor scale, for glms.
  
  o Added carHexsticker().
  
  o Updated CITATION file.
  
  o Small corrections.
  
Changes to Version 3.0-2

  o Include unexported copy of rather than import utils::askYesNo(), which doesn't exist before R 3.5.0. To be reversed in car 3.0-3 which will require R >= 3.5.0
  
  o Fix a bug in confint.boot() and hence Confint.boot() that always set level=0.95 when confint when function falls back to type="perc" (reported by Derek Lee Sonderegger).

Changes to Version 3.0-1

  o Fix a bug in 'Boot()' so lm and glm models work with transformed predictors like log(x) or I(x-34).

  o For 'smooth' argument to scatterplot() and scatterPlot matrix(), the 'smooth' subargument is replaced by a new argument 'var', and 'lty.smooth', 'col.smooth', 'lwd.smooth' are replaced by 'lty.var', 'col.var' and 'lwd.var', respectively, although the old arguments are still allowed.

  o Mofidied man page for showLabels() to clarify setting the labels argument

  o Too few colors in scatterplot() and scatterplotMatrix() now produces a warning rather than an error (suggestion of John Maindonald).

  o Bug fix to Boot.nlm() (reported by Derek Ogle).

  o Fixed bug in linearHypothesis() for lmer() models using pbkrtest (following report by Francois Piraux). This bug indirectly affected Anova().

  o Fixed bug in scatterplot() when groups variable is not a factor (reported by Alexandre Courtiol).

  o Fixed bug in scatterplot() when legend=FALSE (reported by Castor Guisande).

  o Fixed bug in influence.merMod() and influence.lme() when there is more than one grouping variable (reported by Maarten Jung).

  o Make model.matrix.lme() more bullet proof (following report by Peter Grossmann).

  o Anova.lm() now doesn't permit non-standard coefficient covariance matrix for model with aliased coefficients (following report by Ariel Muldoon).
